syntax = "proto3";

import "tchaxx-extensions.proto";

package test.prefix.dut;

option (tchaxx.global_fb_prefix) = {type: "FB_", instance: "_fb"};
option (tchaxx.global_st_prefix) = {type: "ST_", instance: "_st", property: "st"};

// Test simple message
message TestSimpleMessageDut {
  uint32 id = 1;  // field 1
  // field 2
  repeated uint32 numbers = 2 [(tchaxx.array_len) = 2];
}

// Nested
message TestNestedMessageDut {
  TestSimpleMessageDut simple_message = 1;  // nested field 1
  uint32 id = 2;  // nested field 2
}

// TestEnum comment
enum TestEnum {
  option (tchaxx.enum_prefix) = {type: "E_"};
  TE_DEFAULT = 0; // value 0
  TE_OPTION1 = 1; // value1
  // value 2
  TE_OPTION2 = 2; 
}
